[refactor] Fancard DTO 불변 객체화 및 의존성 주입 개선 - FZ-13
- Response DTO들에 @NoArgsConstructor(access = AccessLevel.PROTECTED) 적용으로 불변 객체화
- FancardServiceImpl에서 @Autowired 제거하고 생성자 주입 방식으로 변경
- Collections.emptyList() 사용으로 빈 컬렉션 처리 일관성 개선